--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,10 @@
     align-items: center;
     justify-content: center;
 }
+
+@media ((min-width: 768px) and (max-width: 1024px)) {
+    .page {
+        min-height: auto;
+        padding: 5vh 0%;
+    }
+}
