--- a/src/index.css
+++ b/src/index.css
@@ -75,3 +75,9 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+@media ((min-width: 768px) and (max-width: 1024px)) {
+  h1 {
+    font-size: 2.5rem;
+  }
+}
