--- a/src/pages/download.css
+++ b/src/pages/download.css
@@ -19,3 +19,10 @@
 .download-section-heading {
     font-size: 2rem;
 }
+
+@media ((min-width: 768px) and (max-width: 1024px)) {
+    .download-page-content {
+        height: auto;
+        padding: 5vh 0%;
+    }
+}
