--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -59,3 +59,13 @@
     background: linear-gradient(to left, #1a1f2580 70%, transparent 30%);
     border-radius: 10px;
 }
+
+@media ((min-width: 768px) and (max-width: 1024px)) {
+    .home-page-content {
+        min-height: 45vh;
+    }
+
+    .iphone {
+        top: 10vh;
+    }
+}
