--- a/src/pages/download.css
+++ b/src/pages/download.css
@@ -26,3 +26,13 @@
         padding: 5vh 0%;
     }
 }
+
+@media ((min-width: 320px) and (max-width: 767px)) {
+    .download-page-content {
+        background-position: left;
+    }
+
+    .download-section {
+        grid-column: 1/3;
+    }
+}
