--- a/src/pages/footer.css
+++ b/src/pages/footer.css
@@ -46,3 +46,13 @@
 .copyright-section {
     text-align: center;
 }
+
+@media ((min-width: 320px) and (max-width: 767px)) {
+    .footer-section-content {
+        flex-direction: column;
+    }
+
+    .footer-section-content > div {
+        width: 100%;
+    }
+}
