--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,19 @@
     justify-content: center;
 }
 
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+    background-color: #0000001a;
+}
+
 @media ((min-width: 768px) and (max-width: 1024px)) {
     .page {
         min-height: auto;
