--- a/src/index.css
+++ b/src/index.css
@@ -81,3 +81,9 @@ button:focus-visible {
     font-size: 2.5rem;
   }
 }
+
+@media ((min-width: 320px) and (max-width: 767px)) {
+  h1 {
+      font-size: 2rem;
+  }
+}
