--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -32,6 +32,7 @@
 .home-page-content-para {
     font-size: 14px;
     margin-bottom: 0%;
+    opacity: 0.85;
 }
 
 .home-page-right-heading-container {
@@ -46,10 +47,10 @@
 }
 
 .iphone {
-    height: 400px;
+    height: 75vh;
     filter: drop-shadow(10px 50px 25px #0f1115);
     position: relative;
-    top: 20vh;
+    top: 15vh;
 }
 
 .home-page-content-section3 {
@@ -66,6 +67,31 @@
     }
 
     .iphone {
+        height: 40vh;
         top: 10vh;
+    }
+}
+
+@media ((min-width: 320px) and (max-width: 767px)) {
+    .home-page-content {
+        display: flex;
+        flex-direction: column;
+        gap: 48px;
+        padding: 5rem 0rem;
+    }
+
+    .home-page-left-heading {
+        font-size: 3rem;
+        text-align: center;
+    }
+
+    .iphone {
+        top: 0;
+        height: 65vh;
+    }
+
+    .home-page-right-heading,
+    .home-page-content-section3 {
+        display: none;
     }
 }
