--- a/src/pages/whyUs.css
+++ b/src/pages/whyUs.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     width: 80%;
+    text-align: center;
 }
 
 .whyUs-page-heading {
@@ -19,9 +20,10 @@
 
 .mobile-content {
     text-align: center;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
+    cursor: pointer;
 }
 
 .mobile-screenshot {
-    height: 300px;
+    height: 45vh;
 }
