--- a/src/pages/contact.css
+++ b/src/pages/contact.css
@@ -57,3 +57,11 @@
         width: 100%;
     }
 }
+
+@media (prefers-color-scheme: dark) {
+    .contact-form-input,
+    .contact-form-message-box {
+        background-color: white;
+        color: black;
+    }
+}
