Testimonials updated in the website

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 .page {
     width: 100%;
-    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 7rem 0;
 }
 
 .overlay {
