--- a/src/components/socialMediaBar.css
+++ b/src/components/socialMediaBar.css
@@ -15,9 +15,9 @@
 
 .social-media-icons {
     color: white;
-    font-size: 24px;
+    font-size: 32px !important;
     cursor: pointer;
-    transition: transform 0.5s ease 0.1s;
+    transition: transform 0.5s ease 0.1s !important;
 }
 
 .social-media-icons:hover {
