--- a/src/pages/download.css
+++ b/src/pages/download.css
@@ -1,7 +1,8 @@
 .download-page-content {
     width: 95%;
     height: 80vh;
-    margin: 0 auto;
+    margin: 2rem auto;
+    padding: 0;
     background-image: url('/src//assets/download-bg.jpg');
     background-size: cover;
     background-position: center;
