--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,6 @@ html {
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
   color: #213547;
   background-color: #ffffff;
 
@@ -18,16 +17,15 @@ html {
 }
 
 #root {
+  display: flex;
+  flex-direction: column;
   width: 100vw;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
   text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
 }
 
 body {
@@ -44,46 +42,6 @@ h1 {
   line-height: 1.1;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+button{
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
-
-@media ((min-width: 768px) and (max-width: 1024px)) {
-  h1 {
-    font-size: 2.5rem;
-  }
-}
-
-@media ((min-width: 320px) and (max-width: 767px)) {
-  h1 {
-      font-size: 2rem;
-  }
 }
