--- a/src/components/socialMediaBar.css
+++ b/src/components/socialMediaBar.css
@@ -1,7 +1,7 @@
 .social-media-bar {
     width: 100px;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     background: linear-gradient(to bottom, rgba(255, 149, 9, 0.87), rgba(255, 149, 9, 0.5));
